<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <Button
        android:id="@+id/addFullSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_full_schedule" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
        android:id="@+id/addLectureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewLecture" />
    
        <Button
            android:id="@+id/addLabButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/addNewLab" />
        
    </LinearLayout>

    <Button
        android:id="@+id/viewScheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="160dip"
        android:layout_marginTop="110dip"
        android:text="@string/viewSchedule" />

    <Button
        android:id="@+id/newModuleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/addNewModule" />

</LinearLayout>
